<resources>
    <string name="app_name">MVVMExample</string>
    <string name="userNameHint">Username</string>
    <string name="passwordHint">****************</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="singup">Sing up</string>
    <string name="last_name_hint">Last Name</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">55********</string>
    <string name="age_hint">Age</string>
    <string name="txt_register">Register</string>
    <string name="password_hint">**********</string>
</resources>